fix: added abbility to update categories in ingredients and meals in categories
