# server/routes/ingredients/index.post.ts
@@ -1,23 +1,19 @@
-import { ObjectId } from "mongodb";
 
 const validationSchema = z.object({
   name: z.string().min(1, "Name is required"),
   calories: z.number().min(0, "Calories must be a positive number"),
   proteins: z.number().min(0, "Proteins must be a positive number"),
   grams: z.number().min(0, "Grams must be a positive number"),
+  categoryId: z.string().transform(objectIdTransform),
 });
 
 export default defineEventHandler(async (event) => {
   const userId = await getUserId(event);
-  const categoryId = getRouterParam(event, "categoryId");
-
-  if (!ObjectId.isValid(categoryId)) {
-    throw createError({ statusCode: 400, message: "Invalid Category ID" });
-  }
+  const { categoryId, ...validatedBody } = await zodValidateBody(event, validationSchema.parse);
 
   // Check if the category exists and belongs to the user
   const category = await ModelCategories.findOne({
-    _id: new ObjectId(categoryId),
+    _id: categoryId,
     userId,
   });
   if (!category) {
@@ -27,11 +23,9 @@ export default defineEventHandler(async (event) => {
     });
   }
 
-  const validatedBody = await zodValidateBody(event, validationSchema.parse);
-
   const doc = new ModelIngredients({
     userId,
-    categoryId: categoryId,
+    categoryId,
     ...validatedBody,
   });
   const saved = await doc.save();
